<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="0dp"
    tools:context=".MainActivity">

    <!--<TextView
        android:background="@android:color/holo_blue_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:layout_marginLeft="@dimen/space_8"
        android:padding="@dimen/space_16"
        android:textStyle="bold"
        />

    <TextView
        android:background="@android:color/holo_red_light"
        android:text="@string/hello_android"
        android:layout_marginTop="@dimen/space_8"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="@dimen/space_8"
        android:padding="@dimen/space_16"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/android" />-->

    <!--<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnClickMeOnClick"
        android:text="@string/click_me" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/space_8"
        android:background="@color/colorAccent">

        <EditText
            android:id="@+id/edittext_email"
            android:layout_height="match_parent"
            android:layout_weight="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </View>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/i_accept_t_an_c" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:checked="true"
            android:text="@string/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:layout_marginLeft="@dimen/space_8"
            android:text="@string/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>
    <SeekBar
        android:layout_marginTop="@dimen/space_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="20"
        />-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:text="@string/this_is_an_orange_textview"
        android:textColor="@android:color/white"
        />
    <TextView
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/light_gren"
        android:text="@string/this_is_a_green_textview"
        />
    <TextView
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:text="@string/this_is_a_blue_textview"
        android:textColor="@android:color/white"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
    <Button
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:background="@color/medium_blue"
        android:layout_margin="@dimen/space_8"
        android:text="@string/this_is_a_button"
        />

        <ImageView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/paintpalette"/>
        <Button
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:background="@android:color/holo_green_light"
            android:layout_margin="@dimen/space_8"
            android:text="@string/this_is_a_button"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/holo_orange_light">
        <EditText
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/holo_orange_light"
            android:hint="@string/this_is_an_edit_text"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginBottom="@dimen/space_8"
            />
        <EditText
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/holo_orange_light"
            android:hint="@string/this_is_an_edit_text"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginBottom="@dimen/space_8"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/holo_blue_light">
        <CheckBox
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/notify_me"
            />
        <Switch
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="Auto backup"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        >
    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        style="?android:attr/ratingBarStyleSmall"
        android:rating="4"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_blue_light"
        >
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                ></RadioButton>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                ></RadioButton>
        </RadioGroup>
    </LinearLayout>
</LinearLayout>





